# Terminal

./: .gitignore  CMakeLists.txt  README.md
include/commands/: clear.h  echo.h  exit.h  help.h  meow.h
include/core/: myexecuter.h  myparser.h  terminal.h
src/: main.cpp
src/commands/: clear.cpp  echo.cpp  exit.cpp  help.cpp  meow.cpp
src/core/: myexecuter.cpp  myparser.cpp  terminal.cpp
